dark  & light theme added 🌝🌞

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="Logo.ico" />
@@ -16,7 +16,8 @@
     <meta property="og:image:height" content="800" />
     <meta property="og:url" content="https://jhon-arciniegas.vercel.app/" />
     <meta property="og:type" content="website" />
-    <title>Jhon Arciniegas</title>
+    <link rel="manifest" href="/manifest.json" />
+    <title>Jhon A. | Portafolio</title>
   </head>
   <body>
     <div id="root"></div>
