--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="Logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#217CFF" />
+    <meta name="theme-color" content="#22c55e" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://jhon-arciniegas.vercel.app/" />
     <meta property="og:type" content="website" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Jhon A. | Portafolio</title>
+    <title>Jhon | Software developer</title>
   </head>
   <body>
     <div id="root"></div>
