--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="Logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#22c55e" />
+    <meta name="theme-color" content="#065f46" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <meta property="og:title" content="Jhon Arciniegas" />
-    <meta property="og:description" content="Ingeniero de Sistemas centrado en crear productos intuitivos y funcionales." />
+    <meta property="og:description" content="Desarrollador centrado en crear productos intuitivos y funcionales." />
     <meta property="og:image" content="%PUBLIC_URL%/imgPreview.png" />
     <meta property="og:image:width" content="1600" />
     <meta property="og:image:height" content="800" />
     <meta property="og:url" content="https://jhon-arciniegas.vercel.app/" />
     <meta property="og:type" content="website" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Jhon | Software developer</title>
+    <title>Jhon - developer</title>
   </head>
   <body>
     <div id="root"></div>
